Release 0.3.0 Switched to Java 7